Prevent overflow on x axis in the chat window

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -20,7 +20,7 @@ body::-webkit-scrollbar {
 }
 
 #Conversation {
-    overflow: auto;
+    overflow-x: hidden;
 }
 
 .Sent {
